<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_home"
        android:icon="@drawable/outline_home_24"
        android:title="@string/txt_home"
        app:cnb_iconColor="@color/onPrimary"
        app:cnb_textColor="@color/onPrimary"
        app:cnb_backgroundColor="@color/primary"/>

    <item
        android:id="@+id/menu_jadwal"
        android:icon="@drawable/outline_calendar_month_24"
        android:title="@string/txt_jadwal"
        app:cnb_iconColor="@color/onPrimary"
        app:cnb_textColor="@color/onPrimary"
        app:cnb_backgroundColor="@color/primary"/>

    <item
        android:id="@+id/menu_akun"
        android:icon="@drawable/outline_person_24"
        android:title="@string/txt_akun"
        app:cnb_iconColor="@color/onPrimary"
        app:cnb_textColor="@color/onPrimary"
        app:cnb_backgroundColor="@color/primary"/>

</menu>