<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".error.GeneralError"
    android:background="@drawable/background_gradient">

    <ImageView
        android:id="@+id/imageGeneralError"
        android:layout_width="360dp"
        android:layout_height="360dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="100dp"
        app:srcCompat="@drawable/picture_error_general" />

    <TextView
        android:id="@+id/textDisplayGeneralError"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/onGradient"
        android:text="@string/display_general_error"
        android:textAppearance="@style/Playpen.Display"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageGeneralError" />

    <TextView
        android:id="@+id/textBodyGeneralError"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:textColor="@color/onGradient"
        android:text="@string/body_general_error"
        android:textAlignment="center"
        android:textAppearance="@style/Playpen.Body"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textDisplayGeneralError" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnGeneralError"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:padding="0dp"
        app:backgroundTint="@color/onGradient"
        android:background="@drawable/background_button_12dp"
        android:text="@string/button_general_error"
        android:textAppearance="@style/Playpen.Label"
        android:layout_marginTop="100dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textBodyGeneralError" />
</androidx.constraintlayout.widget.ConstraintLayout>